fix(TextInput): correct placeholder logic to ensure proper display when activeLabel is set style(TextInput.module.scss): enhance label transition effects and adjust positioning for better UX style(TextInput.module.scss): update placeholder behavior to improve visibility and interaction feedback

--- a/src/components/input/text_input/TextInput.module.scss
+++ b/src/components/input/text_input/TextInput.module.scss
@@ -8,16 +8,16 @@
   label {
     color: theme.$text-secondary;
     pointer-events: none;
-    transition: all 300ms ease-in-out;
+    transition: left 300ms, top 300ms, font-size 300ms, padding-top 300ms, transform 300ms, color 300ms,
+      background-color 300ms ease-in-out;
+    font-size: 1em;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
     left: spacing.$spacer-md;
     z-index: 1;
-    font-size: 1em;
-    background-color: transparent;
-    padding: 0;
-    opacity: 1;
+    background-color: theme.$background-color-primary;
+    transform: translateY(-50%);
+    padding: 0 spacing.$spacer-xxs;
   }
 }
 
@@ -34,32 +34,25 @@
   background-color: theme.$background-color-primary;
   color: theme.$text-primary;
 
-  &::placeholder {
-    opacity: 0;
-  }
-
   // when no content in the input and not focused, display the label as the placeholder
-  &:focus {
-    &~label {
-      top: -0.6em;
-      transform: unset;
-      font-size: 0.8rem;
-      background-color: theme.$background-color-primary;
-      padding: 0 spacing.$spacer-xxs;
-    }
+  &:focus ~ label,
+  &:not(:placeholder-shown) ~ label {
+    top: -0.6em;
+    left: spacing.$spacer-md;
+    transform: none;
+    font-size: 0.8rem;
+    background-color: theme.$background-color-primary;
   }
 
+ 
   // keep precedence! filled < hover < success < error < disabled
   &.filled {
     background-color: theme.$background-color-secondary;
+  }
 
-    &~label {
-      top: -0.6em;
-      transform: unset;
-      font-size: 0.8rem;
-      background-color: theme.$background-color-primary;
-      padding: 0 spacing.$spacer-xxs;
-    }
+  &::placeholder {
+    opacity: 0;
+    color: theme.$text-secondary;
   }
 
   &:hover {
@@ -127,10 +120,12 @@
 
   .textInput {
     padding-left: 2em !important;
-  }
 
-  label {
-    left: calc(spacing.$spacer-md * 2 + 16px);
+    &:placeholder-shown:not(:focus) {
+      &~label {
+        left: var(--spacer-md, calc(var(--space-unit, 1em) * 2));
+      }
+    }
   }
 
   // left icon element
